force-app/main/default/objects/MD_Product2__c/MD_Product2__c.object-meta.xml
<CustomObject>
    <label>Material Master</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Material Master</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>