force-app/main/default/objects/MD_Product2__c/fields/Alternative_UoM__c.field-meta.xml
<CustomField>
    <fullName>Alternative_UoM__c</fullName>
    <label>Alternative UoM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>