force-app/main/default/objects/MD_Product2__c/fields/Available_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Available_Quantity__c</fullName>
    <label>Available Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>