force-app/main/default/objects/MD_Product2__c/fields/Base_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Base_Unit_of_Measure__c</fullName>
    <label>Base Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SET</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>PAC</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>ML</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>MG</fullName>
            </value>
            <value>
                <fullName>SHT</fullName>
            </value>
            <value>
                <fullName>µL</fullName>
            </value>
            <value>
                <fullName>µg</fullName>
            </value>
            <value>
                <fullName>KT</fullName>
            </value>
            <value>
                <fullName>KU</fullName>
            </value>
            <value>
                <fullName>VL</fullName>
            </value>
            <value>
                <fullName>GM</fullName>
            </value>
            <value>
                <fullName>ROL</fullName>
            </value>
            <value>
                <fullName>µM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>