force-app/main/default/objects/MD_Product2__c/fields/Commodity_Code__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Code__c</fullName>
    <label>Commodity Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>