force-app/main/default/objects/MD_Product2__c/fields/Delivering_Plant__c.field-meta.xml
<CustomField>
    <fullName>Delivering_Plant__c</fullName>
    <label>Delivering Plant</label>
    <length>50</length>
    <type>Text</type>
</CustomField>