force-app/main/default/objects/MD_Product2__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Material Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>