force-app/main/default/objects/MD_Product2__c/fields/DisplayUrl__c.field-meta.xml
<CustomField>
    <fullName>DisplayUrl__c</fullName>
    <label>Display URL</label>
    <type>Url</type>
</CustomField>