force-app/main/default/objects/MD_Product2__c/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <label>Distribution Channel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>