force-app/main/default/objects/MD_Product2__c/fields/Industry_Standard_Description__c.field-meta.xml
<CustomField>
    <fullName>Industry_Standard_Description__c</fullName>
    <label>Industry Standard Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>