force-app/main/default/objects/MD_Product2__c/fields/Material_Category__c.field-meta.xml
<CustomField>
    <fullName>Material_Category__c</fullName>
    <label>Material Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instrument</fullName>
            </value>
            <value>
                <fullName>Reagent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>