force-app/main/default/objects/MD_Product2__c/fields/Material_Group_1__c.field-meta.xml
<CustomField>
    <fullName>Material_Group_1__c</fullName>
    <label>Material Group 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MaterialGroup1-0</fullName>
            </value>
            <value>
                <fullName>MaterialGroup1-1</fullName>
            </value>
            <value>
                <fullName>MaterialGroup1-2</fullName>
            </value>
            <value>
                <fullName>34 - Protein Platforms</fullName>
            </value>
            <value>
                <fullName>42 - DNA-RNA Platforms</fullName>
            </value>
            <value>
                <fullName>50 - Muse RUO</fullName>
            </value>
            <value>
                <fullName>51 - Muse Clinical</fullName>
            </value>
            <value>
                <fullName>52 - Extractions- F&amp;F</fullName>
            </value>
            <value>
                <fullName>53 - Natural - F&amp;F</fullName>
            </value>
            <value>
                <fullName>54 - Synthetics - F&amp;F</fullName>
            </value>
            <value>
                <fullName>55 - Assays components</fullName>
            </value>
            <value>
                <fullName>56 - Diagnostic Beads</fullName>
            </value>
            <value>
                <fullName>57 - Magprep</fullName>
            </value>
            <value>
                <fullName>58 - PROCLIN</fullName>
            </value>
            <value>
                <fullName>59 - Labelled isotopes</fullName>
            </value>
            <value>
                <fullName>60 - Analytical Reagents / Chemicals</fullName>
            </value>
            <value>
                <fullName>61 - Imaging Flow Software</fullName>
            </value>
            <value>
                <fullName>63 - In Process Testing Pharma</fullName>
            </value>
            <value>
                <fullName>64 - In Process Testing Food&amp;Beverages</fullName>
            </value>
            <value>
                <fullName>65 - Release Testing Pharma</fullName>
            </value>
            <value>
                <fullName>66 - Release Testing Food&amp;Beverages</fullName>
            </value>
            <value>
                <fullName>67 - Environmental Monitoring Pharma</fullName>
            </value>
            <value>
                <fullName>68 - Environmental Monitoring Food&amp;Bev</fullName>
            </value>
            <value>
                <fullName>69 - Media Sigma</fullName>
            </value>
            <value>
                <fullName>72 - In Process Products Medical</fullName>
            </value>
            <value>
                <fullName>73 - BioMonitoring Services</fullName>
            </value>
            <value>
                <fullName>74 - BioControl Systems</fullName>
            </value>
            <value>
                <fullName>103 - Reactive Mesogens</fullName>
            </value>
            <value>
                <fullName>108 - PM</fullName>
            </value>
            <value>
                <fullName>112 - Mica Cosmetics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>