force-app/main/default/objects/MD_Product2__c/fields/Material_Group_2__c.field-meta.xml
<CustomField>
    <fullName>Material_Group_2__c</fullName>
    <label>Material Group 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MaterialGroup2-0</fullName>
            </value>
            <value>
                <fullName>MaterialGroup2-1</fullName>
            </value>
            <value>
                <fullName>MaterialGroup2-2</fullName>
            </value>
            <value>
                <fullName>10 - OLED</fullName>
            </value>
            <value>
                <fullName>26 - LC-Materials</fullName>
            </value>
            <value>
                <fullName>6P - Viral &amp; Gene Therapy</fullName>
            </value>
            <value>
                <fullName>A1 - Cobetter Analytical Workflow Tools</fullName>
            </value>
            <value>
                <fullName>A2 - Cobetter In Process Testing</fullName>
            </value>
            <value>
                <fullName>A3 - Cobetter Cartridge Filters</fullName>
            </value>
            <value>
                <fullName>BA - Advanced Genomics</fullName>
            </value>
            <value>
                <fullName>BB - BRM Applied Biology - Sigma</fullName>
            </value>
            <value>
                <fullName>BC - BRM Applied Lab Essentials - Sigma</fullName>
            </value>
            <value>
                <fullName>BD - BRM Services</fullName>
            </value>
            <value>
                <fullName>BE - Flavors and fragances</fullName>
            </value>
            <value>
                <fullName>BF - Flow Cytometry Service</fullName>
            </value>
            <value>
                <fullName>BG - Beads &amp; Fusion</fullName>
            </value>
            <value>
                <fullName>BI - Blood Typing</fullName>
            </value>
            <value>
                <fullName>BJ - Immunoassay Kits &amp; components</fullName>
            </value>
            <value>
                <fullName>BK - Membranes &amp; rapid technologies</fullName>
            </value>
            <value>
                <fullName>BL - Tissue Diag Lab Essentials - Sigma</fullName>
            </value>
            <value>
                <fullName>BM - Biobase Labware Alliances</fullName>
            </value>
            <value>
                <fullName>BO - Biobase Labware Alliances</fullName>
            </value>
            <value>
                <fullName>C5 - CO Performance Materials</fullName>
            </value>
            <value>
                <fullName>DA - Diagnostics</fullName>
            </value>
            <value>
                <fullName>G1 - LGC Reference Materials (RM)</fullName>
            </value>
            <value>
                <fullName>GE - Gene Editing</fullName>
            </value>
            <value>
                <fullName>H0 - BioControl Systems</fullName>
            </value>
            <value>
                <fullName>H1 - Display Patterning Materials</fullName>
            </value>
            <value>
                <fullName>H2 - IC Materials</fullName>
            </value>
            <value>
                <fullName>H3 - Cell Analysis - Guava</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>