force-app/main/default/objects/MD_Product2__c/fields/Material_Group_3__c.field-meta.xml
<CustomField>
    <fullName>Material_Group_3__c</fullName>
    <label>Material Group 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MaterialGroup3-0</fullName>
            </value>
            <value>
                <fullName>MaterialGroup3-1</fullName>
            </value>
            <value>
                <fullName>MaterialGroup3-2</fullName>
            </value>
            <value>
                <fullName>AS1 - Advanced Genomics</fullName>
            </value>
            <value>
                <fullName>AS2 - Commodities &amp; Services</fullName>
            </value>
            <value>
                <fullName>AS3 - Flavors &amp; Fragrances</fullName>
            </value>
            <value>
                <fullName>AS4 - Flow Cytometry</fullName>
            </value>
            <value>
                <fullName>AS5 - Immunoassay &amp; Rapid</fullName>
            </value>
            <value>
                <fullName>AS6 - Tissue Diagnostics</fullName>
            </value>
            <value>
                <fullName>AS7 - Gene Editing</fullName>
            </value>
            <value>
                <fullName>B01 - Biobase Labware Alliances</fullName>
            </value>
            <value>
                <fullName>C04 - Lab Water</fullName>
            </value>
            <value>
                <fullName>C05 - Lab Classics</fullName>
            </value>
            <value>
                <fullName>C09 - Analytical Workflow Tools</fullName>
            </value>
            <value>
                <fullName>C15 - MolecularPlatforms</fullName>
            </value>
            <value>
                <fullName>C16 - Protein &amp; Pathway Technologies</fullName>
            </value>
            <value>
                <fullName>C17 - Cell Biology</fullName>
            </value>
            <value>
                <fullName>C22 - Cell Culture</fullName>
            </value>
            <value>
                <fullName>C23 - BioPharma Materials</fullName>
            </value>
            <value>
                <fullName>C24 - Single-Use/Hardware</fullName>
            </value>
            <value>
                <fullName>C25 - Aseptic</fullName>
            </value>
            <value>
                <fullName>C26 - Downstream</fullName>
            </value>
            <value>
                <fullName>C27 - Purification</fullName>
            </value>
            <value>
                <fullName>C28 - API Contract Manufacturing</fullName>
            </value>
            <value>
                <fullName>C29 - Formulation</fullName>
            </value>
            <value>
                <fullName>C30 - Pharm Materials</fullName>
            </value>
            <value>
                <fullName>C31 - Biodevelopment Manufacturing</fullName>
            </value>
            <value>
                <fullName>C33 - Bioreliance Testing Services</fullName>
            </value>
            <value>
                <fullName>C34 - Chemical Synthesis</fullName>
            </value>
            <value>
                <fullName>C35 - Biochemistry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>