force-app/main/default/objects/MD_Product2__c/fields/Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Material_Number__c</fullName>
    <externalId>true</externalId>
    <label>Material Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>