force-app/main/default/objects/MD_Product2__c/fields/Material_Short_Text__c.field-meta.xml
<CustomField>
    <fullName>Material_Short_Text__c</fullName>
    <label>Material Short Text</label>
    <length>80</length>
    <type>Text</type>
</CustomField>