force-app/main/default/objects/MD_Product2__c/fields/Material_Type__c.field-meta.xml
<CustomField>
    <fullName>Material_Type__c</fullName>
    <label>Material Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ZSCC</fullName>
            </value>
            <value>
                <fullName>ZTRC</fullName>
            </value>
            <value>
                <fullName>ZTRD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>