force-app/main/default/objects/MD_Product2__c/fields/Old_Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_Material_Number__c</fullName>
    <label>Old Material Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>