force-app/main/default/objects/MD_Product2__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <label>Plant</label>
    <length>50</length>
    <type>Text</type>
</CustomField>