force-app/main/default/objects/MD_Product2__c/fields/Quantity_ISO_UNIT__c.field-meta.xml
<CustomField>
    <fullName>Quantity_ISO_UNIT__c</fullName>
    <label>Quantity ISO UNIT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>