force-app/main/default/objects/MD_Product2__c/fields/QuantityUnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>QuantityUnitOfMeasure__c</fullName>
    <label>Quantity Unit Of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Each</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>