force-app/main/default/objects/MD_Product2__c/fields/Size_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Size_Dimensions__c</fullName>
    <label>Size/Dimensions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>