force-app/main/default/objects/MD_Product2__c/fields/Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Sub_Group__c</fullName>
    <label>Sub Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BM</fullName>
            </value>
            <value>
                <fullName>MCBS</fullName>
            </value>
            <value>
                <fullName>LW</fullName>
            </value>
            <value>
                <fullName>IPS</fullName>
            </value>
            <value>
                <fullName>S&amp;P</fullName>
            </value>
            <value>
                <fullName>WFA</fullName>
            </value>
            <value>
                <fullName>LS</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>PCS</fullName>
            </value>
            <value>
                <fullName>IOR</fullName>
            </value>
            <value>
                <fullName>ORG</fullName>
            </value>
            <value>
                <fullName>RCR</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>BPS</fullName>
            </value>
            <value>
                <fullName>SOL</fullName>
            </value>
            <value>
                <fullName>MICR</fullName>
            </value>
            <value>
                <fullName>CHRM</fullName>
            </value>
            <value>
                <fullName>CB</fullName>
            </value>
            <value>
                <fullName>ROC</fullName>
            </value>
            <value>
                <fullName>KRAE</fullName>
            </value>
            <value>
                <fullName>BBASE</fullName>
            </value>
            <value>
                <fullName>LGC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>