force-app/main/default/objects/MD_Product2__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E - VitalScientific</fullName>
            </value>
            <value>
                <fullName>S - VitalScientific</fullName>
            </value>
            <value>
                <fullName>D - VitalScientific</fullName>
            </value>
            <value>
                <fullName>B - Boule</fullName>
            </value>
            <value>
                <fullName>LOC - VitalScientific</fullName>
            </value>
            <value>
                <fullName>U - VitalScientific</fullName>
            </value>
            <value>
                <fullName>DM - VitalScientific</fullName>
            </value>
            <value>
                <fullName>A - Boule</fullName>
            </value>
            <value>
                <fullName>F - VitalScientific</fullName>
            </value>
            <value>
                <fullName>LT -</fullName>
            </value>
            <value>
                <fullName>YHLO - YHLO</fullName>
            </value>
            <value>
                <fullName>ER - Erba</fullName>
            </value>
            <value>
                <fullName>NV - Nova</fullName>
            </value>
            <value>
                <fullName>OR - OCD</fullName>
            </value>
            <value>
                <fullName>STA - Stago</fullName>
            </value>
            <value>
                <fullName>AV - AlphaVenus</fullName>
            </value>
            <value>
                <fullName>DYM - Dymind</fullName>
            </value>
            <value>
                <fullName>HW - Headway</fullName>
            </value>
            <value>
                <fullName>ZYB - ZYBIO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>