force-app/main/default/objects/MD_Product2__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Material_Number__c</columns>
    <columns>Old_Material_Number__c</columns>
    <columns>Description__c</columns>
    <columns>Industry_Standard_Description__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>